--- a/mangopaint/nbproject/project.properties
+++ b/mangopaint/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=mangopaint
-main.class=mangopaint.Mangopaint
+main.class=mangopaint.MainClass
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
